# bourezgui_morandeau_risk

./: .gitignore  CMakeLists.txt  Makefile  README.md  autodia.out.dia  cmake_install.cmake  configure  make  run
divers/: Test.cpp
rapport/: .~lock.rapport.odt#  moteur de jeu.odt  rapport.abw  rapport.odt  rapport2.odt
res/: autodia.out.dia  autodia.out.dia.autosave  initialisation frontiere.odt  jaune.xcf  rouge.xcf  vert.xcf
res2/: Diagramme_class.dia  Diagramme_class.dia.autosave  SchemaServeurClient.odg  SchemaServeurClient.png.odg  partie_serveur.dia
src/: Etat.cpp  Etat.hpp  Etat_jeu.cpp  Etat_jeu.hpp  Frontiere.cpp  Frontiere.hpp  Gestion_tour.cpp  Gestion_tour.hpp  IA_moyen.cpp  IA_moyen.hpp  Ia.cpp  Ia.hpp  Joueur.cpp  Joueur.hpp  Main.cpp  Moteur_jeu.cpp  Moteur_jeu.hpp  Pion.cpp  Pion.hpp  Territoire.cpp  Territoire.hpp  TileMap.hpp  Tour.cpp  testDuVertex.cpp
src2/: Action.cpp  Action.h  Attaquer.cpp  Attaquer.h  Controleur_graphique.cpp  Controleur_graphique.h  Controleur_graphique.hpp  Deplacer.cpp  Deplacer.h  Etape.cpp  Etape.h  Etat.cpp  Etat.h  Etat.hpp  Graphique_etape.cpp  Graphique_etape.h  Graphique_etape.hpp  Graphique_pays.cpp  Graphique_pays.h  Graphique_pays.hpp  Main.cpp  Moteur.cpp  Moteur.h  Moteur.hpp  NOUVEAU DEPART.txt  Pays.cpp  Pays.h  Pays.hpp  Plateau.cpp  Plateau.h  Plateau.hpp  Rendu.cpp  Rendu.h  Rendu.hpp  Renforcer.cpp  Renforcer.h
src2/Serveur/: Commande.cpp  Commande.h  Commande.hpp  CommandeDB.cpp  CommandeDB.h  CommandeDB.hpp  CommandeService.cpp  CommandeService.h  CommandeService.hpp  ServiceException.h  main.cpp
